[gd_scene load_steps=21 format=3 uid="uid://dutuwg10y2hwq"]

[ext_resource type="Material" uid="uid://b863l3lxgsu55" path="res://Resources/Shaders/palette_swap_material.tres" id="1_fgo5c"]
[ext_resource type="Script" path="res://Scenes and Scripts/UI/Menus/credits.gd" id="2_nu17t"]
[ext_resource type="PackedScene" uid="uid://c4lyyfxwvqyfk" path="res://Scenes and Scripts/UI/Buttons/panelButton.tscn" id="2_rnov3"]
[ext_resource type="Texture2D" uid="uid://c7jti5gp87fni" path="res://Textures/UI/Information/InfoBox.png" id="3_00snx"]
[ext_resource type="Shader" path="res://Resources/Shaders/palette_swap.gdshader" id="3_da0v7"]
[ext_resource type="Texture2D" uid="uid://d38a3uriu26gx" path="res://Textures/Buttons/icons/donate.png" id="4_6crf1"]
[ext_resource type="Texture2D" uid="uid://bs7yco7s5pg15" path="res://icon.png" id="4_84af4"]
[ext_resource type="Texture2D" uid="uid://bwwdur67r0bgl" path="res://Textures/aseprite.png" id="5_e238y"]
[ext_resource type="PackedScene" uid="uid://ctj2f7ofdkrr1" path="res://Scenes and Scripts/UI/Buttons/pull_out_tab_button_up.tscn" id="6_5ir6h"]
[ext_resource type="Texture2D" uid="uid://caoqaiv3rlamr" path="res://Textures/Buttons/Tabs/tab_up_highlight.png" id="7_c24s2"]
[ext_resource type="Texture2D" uid="uid://dsoknox023dom" path="res://Textures/Buttons/Tabs/tab_up.png" id="8_0vvrs"]
[ext_resource type="FontFile" uid="uid://cq27s0444iwkg" path="res://Textures/Fonts/ConnectionIi-2wj8.otf" id="9_t01cb"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nsjc6"]
content_margin_left = 6.0
content_margin_top = 6.0
content_margin_right = 6.0
content_margin_bottom = 6.0
texture = ExtResource("3_00snx")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0
expand_margin_bottom = 20.0

[sub_resource type="FontVariation" id="FontVariation_80dg7"]
base_font = ExtResource("9_t01cb")
spacing_bottom = -2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wi2v2"]
resource_local_to_scene = true
shader = ExtResource("3_da0v7")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_elh15"]
resource_local_to_scene = true
shader = ExtResource("3_da0v7")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sh2sh"]
content_margin_left = 4.0
content_margin_top = 7.0
content_margin_right = 4.0
content_margin_bottom = 4.0
texture = ExtResource("7_c24s2")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_82sh7"]
content_margin_left = 4.0
content_margin_top = 7.0
content_margin_right = 4.0
content_margin_bottom = 4.0
texture = ExtResource("8_0vvrs")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 3.0

[sub_resource type="FontVariation" id="FontVariation_scn6y"]
base_font = ExtResource("9_t01cb")
spacing_bottom = -2

[sub_resource type="Theme" id="Theme_v1op3"]
default_font = SubResource("FontVariation_scn6y")
default_font_size = 10
Button/styles/hover = SubResource("StyleBoxTexture_sh2sh")
Button/styles/normal = SubResource("StyleBoxTexture_82sh7")
Button/styles/pressed = SubResource("StyleBoxTexture_82sh7")

[node name="Credits" type="Control" node_paths=PackedStringArray("ContentContainer", "TabButton", "MovingContainer")]
material = ExtResource("1_fgo5c")
use_parent_material = true
layout_mode = 3
anchors_preset = 0
script = ExtResource("2_nu17t")
ContentContainer = NodePath("VBoxContainer/PanelContainer")
TabButton = NodePath("VBoxContainer/Tab")
MovingContainer = NodePath("VBoxContainer")
move_direction = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
use_parent_material = true
layout_mode = 2
offset_right = 118.0
offset_bottom = 62.0
theme_override_constants/separation = -141

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_nsjc6")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
use_parent_material = true
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_80dg7")
text = "Made by
Adam Owen and Jo Gaunt
Made with open-source
software:"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 11
theme_override_constants/v_separation = 2
columns = 2

[node name="GodotIcon" type="TextureButton" parent="VBoxContainer/PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(2.08165e-12, 26)
layout_mode = 2
texture_normal = ExtResource("4_84af4")
ignore_texture_size = true
stretch_mode = 5

[node name="AsepriteIcon" type="TextureButton" parent="VBoxContainer/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("5_e238y")
ignore_texture_size = true
stretch_mode = 5

[node name="Label2" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/GridContainer"]
use_parent_material = true
layout_mode = 2
theme_override_font_sizes/font_size = 9
text = "Godot"
horizontal_alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/GridContainer"]
use_parent_material = true
layout_mode = 2
theme_override_font_sizes/font_size = 9
text = "Aseprite"
horizontal_alignment = 1

[node name="Donate" parent="VBoxContainer/PanelContainer/VBoxContainer" instance=ExtResource("2_rnov3")]
material = SubResource("ShaderMaterial_wi2v2")
layout_mode = 2
icon = ExtResource("4_6crf1")
text = "Donate on KoFi "
minimum_size = Vector2(100, 2.08165e-12)
expand_icon = true

[node name="Tab" parent="VBoxContainer" instance=ExtResource("6_5ir6h")]
material = SubResource("ShaderMaterial_elh15")
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_v1op3")
TabText = "Credits"
TabMinimumSize = Vector2(50, 2.08165e-12)

[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/GridContainer/GodotIcon" to="." method="_on_godot_icon_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/GridContainer/AsepriteIcon" to="." method="_on_aseprite_icon_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/Donate" to="." method="_on_donate_pressed"]
